# data

./: .gitignore  .tool-versions  LICENSE  README.md  justfile  pyproject.toml  setup.cfg  setup.py
ra/: constants.py  definitions.py  utils.py
ra/assets/: addresses.py  e00_geometry.py  inspire_polygons.py  open_names.py  overture_buildings.py  uprn.py  usrn.py
ra/assets/land_registry/: inspire_polygons.py  price_paid.py
ra/assets/ordnance_survey/: lids_uprn_usrn.py  open_names.py  uprn.py  usrn.py
